tests/snapshots/compiler_error_fixtures/ExtraModuleCode.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/ExtraModuleCode.flx
== compile ==
failed (compile)
== diagnostics ==
error[E028]: Invalid Module File

Invalid module file: Module files may only contain imports and a single module declaration.

  examples/compiler_errors/ExtraModuleCode.flx:10:1
   |
10 | fn stray() -> Int {
   | ^

Hint:
  Module files must have .flx extension and valid Flux code.
== stdout ==
<not executed>
