tests/snapshots/compiler_error_fixtures/duplicate_class.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/duplicate_class.flx
== compile ==
ok
== diagnostics ==
error[E440]: Duplicate Type Class

Type class `Show` is already defined.

  examples/compiler_errors/duplicate_class.flx:22:1
   |
22 | class Show<a> {
   | ^^^^^^^^^^^^^^^
23 |     fn show(x: a) -> Int
   | ^^^^^^^^^^^^^^^^^^^^^^^^
24 | }
   | ^
== stdout ==
<not executed>
