tests/snapshots/compiler_error_fixtures/invalid_type_annotation_e303.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/invalid_type_annotation_e303.flx
== compile ==
failed (compile)
== diagnostics ==
error[E423]: Unknown Type

I can't find a type named `NotAType`.

  examples/compiler_errors/invalid_type_annotation_e303.flx:7:19
  |
7 | fn use_unknown(x: NotAType) -> Int {
  |                   ^^^^^^^^
  |                   -------- unknown type used here

Hint:
  Use a built-in type, an in-scope type parameter, or a declared ADT.


error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `use_unknown`.

  examples/compiler_errors/invalid_type_annotation_e303.flx:12:25
   |
 7 | fn use_unknown(x: NotAType) -> Int {
 8 |     0
 9 | }
10 | 
11 | fn main() -> Unit {
12 |     let _ = use_unknown(1)
   |                         ^
   |                         - this argument has type `Int`

Note:
  expected argument type: NotAType
  found argument type: Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `NotAType` value as the 1st argument.

Found 2 errors.
== stdout ==
<not executed>
