tests/snapshots/compiler_error_fixtures/missing_effect_io.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/missing_effect_io.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `print` requires effect `Console` in this function signature.

  examples/compiler_errors/missing_effect_io.flx:2:5
  |
2 |     print("hi")
  |     ^^^^^
  |     ----- effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
