tests/snapshots/compiler_error_fixtures/named_field_duplicate_e462.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/named_field_duplicate_e462.flx
== compile ==
failed (compile)
== diagnostics ==
error[E462]: Duplicate Named Field

Field `x` is listed more than once.

  examples/compiler_errors/named_field_duplicate_e462.flx:9:27
  |
9 |     let p = Point { x: 1, x: 2, y: 3 }
  |                           ^^^^
== stdout ==
<not executed>
